Adds simple implementation with one pin and panel using google maps api.

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>React TypeScript Boilerplate</title>
+    <title>Web Front End Assignment | Marios</title>
 </head>
 
 <body>
-    <div id="root">
-
-    </div>
+    <div id="root"></div>
 </body>
 
 </html>
